@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
 - Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.
 - #285104 Make sure calendar_colors is always an array, needed for transition to new value.
 - #283902 Make sure date_format() isn't used on items with no calendar dates.
